--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,6 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
-<link rel="stylesheet" href="assets/css/style.css">
 <title>That Dude with a Laptop, INC.</title>
 </head>
 <body>
@@ -18,13 +17,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="./indexBS.html">About<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="./index.html">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./portfolioBS.html">Portfolio</a>
+                  <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./contactBS.html">Contact</a>
+                  <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
               </ul>
               <span class="navbar-text">
